develop | Changed input params in add_to_segment endpoint
